support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_unterm_string.i
%module xxx


const char *x = "Hello


